Removed the fixed side bar

--- a/material/admin/templates/admin/base.html
+++ b/material/admin/templates/admin/base.html
@@ -34,7 +34,7 @@
         <header>
             {% block header %}
             {% if not is_popup %}
-            <ul id="slide-out" class="side-nav fixed">
+            <ul id="slide-out" class="side-nav">
                 {% block sidenav_header %}
                 <li>
                     <div class="userView">
